--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -14,10 +14,12 @@
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
     "firebase": "^10.5.0",
+    "leaflet": "^1.9.4",
     "notiflix": "^3.2.6",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux-persist": "^6.0.0",
