--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -23,6 +23,7 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.8.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.3.3"
   },
