--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -14,11 +14,13 @@
     "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
+    "chart.js": "^4.4.4",
     "firebase": "^10.5.0",
     "leaflet": "^1.9.4",
     "notiflix": "^3.2.6",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
