--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   }
 }
