--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.1",
+    "react-typed": "^2.0.12",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.3.3"
   },
